--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="row">
         <div>
           <label for="dogName">Dog name</label>
-          <input id="dogName" type="text" placeholder="e.g., Flip" />
+          <input id="dogName" type="text" placeholder="e.g., Sebastian" />
         </div>
         <div>
           <label for="dob">Birthdate</label>
