--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preload" as="image" href="barkday-logo.png?v=2">
   <link rel="preload" as="image" href="barkday-logo2.png?v=1">
   <link rel="stylesheet" href="style.css?v=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <!-- SPLASH -->
