--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Barkday™ • Dog → Human Years</title>
   <meta name="description" content="Dog-year birthdays: calculate the next one and get a plan for better care." />
-  <link rel="preload" as="image" href="barkday-logo.png?v=2">
-  <link rel="preload" as="image" href="barkday-logo2.png?v=1">
-  <link rel="stylesheet" href="style.css?v=1" />
+  <link rel="preload" as="image" href="barkday-logo.png?v=3">
+  <link rel="preload" as="image" href="barkday-logo2.png?v=2">
+  <link rel="stylesheet" href="style.css?v=2" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
@@ -145,6 +145,6 @@
     </section>
   </div>
 
-  <script src="app.js?v=5" defer></script>
+  <script src="app.js?5" defer></script>
 </body>
 </html>
