--- a/index.html
+++ b/index.html
@@ -146,5 +146,15 @@
   </div>
 
   <script src="app.js?5" defer></script>
+  
+  <footer style="margin-top:40px;padding:20px 0;text-align:center;font-size:0.9em;color:var(--text-secondary)">
+  <p>© 2025 <strong>Barkday™</strong>. All Rights Reserved.</p>
+  <p>
+    <a href="privacy.html">Privacy</a> · 
+    <a href="terms.html">Terms</a>
+  </p>
+  <p><em>As an Amazon Associate I earn from qualifying purchases.</em></p>
+</footer>
+
 </body>
 </html>
