--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 <!-- App icons (optional but nice for browsers) -->
 <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
 <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+<link rel="icon" type="image/png" sizes="512x512" href="icon-384.png">
+<link rel="icon" type="image/png" sizes="512x512" href="icon-256.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black"> <!-- or 'default', 'black-translucent' -->
+
   
 </head>
 <body>
