--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="preload" as="image" href="barkday-logo2.png?v=2">
   <link rel="stylesheet" href="style.css?v=2" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Barkday™" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <!-- PWA manifest + theme color -->
 <link rel="manifest" href="manifest.json">
@@ -17,8 +23,8 @@
 <!-- App icons (optional but nice for browsers) -->
 <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
 <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
-<link rel="icon" type="image/png" sizes="512x512" href="icon-384.png">
-<link rel="icon" type="image/png" sizes="512x512" href="icon-256.png">
+<link rel="icon" type="image/png" sizes="384x384" href="icon-384.png">
+<link rel="icon" type="image/png" sizes="256x256" href="icon-256.png">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black"> <!-- or 'default', 'black-translucent' -->
