--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Barkday™ • Dog → Human Years</title>
   <meta name="description" content="Dog-year birthdays: calculate the next one and get a plan for better care." />
+
+  <!-- Preload assets -->
   <link rel="preload" as="image" href="barkday-logo.png?v=3">
   <link rel="preload" as="image" href="barkday-logo2.png?v=2">
   <link rel="stylesheet" href="style.css?v=2" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Barkday™" />
-  <link rel="manifest" href="/site.webmanifest" />
 
-  <!-- PWA manifest + theme color -->
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#111827">
+  <!-- Favicon / Browser Icons -->
+  <link rel="icon" href="favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="shortcut icon" href="favicon.ico">
 
-<!-- App icons (optional but nice for browsers) -->
-<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
-<link rel="icon" type="image/png" sizes="384x384" href="icon-384.png">
-<link rel="icon" type="image/png" sizes="256x256" href="icon-256.png">
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black"> <!-- or 'default', 'black-translucent' -->
+  <!-- App Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="icon-256.png">
+  <link rel="icon" type="image/png" sizes="384x384" href="icon-384.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
 
-  
+  <!-- Maskable Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-maskable-192.png" purpose="maskable">
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-maskable-512.png" purpose="maskable">
+
+  <!-- Apple Touch -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="Barkday™">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#111827">
 </head>
+
 <body>
   <!-- SPLASH -->
   <div id="splash" class="splash" aria-hidden="true">
