--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Barkday™ • Dog → Human Years</title>
   <meta name="description" content="Dog-year birthdays: calculate the next one and get a plan for better care." />
 
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" sizes="384x384" href="icon-384.png">
   <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
 
-  <!-- Maskable Icons -->
+  <!-- Maskable Icons (for Android/PWA) -->
   <link rel="icon" type="image/png" sizes="192x192" href="icon-maskable-192.png" purpose="maskable">
   <link rel="icon" type="image/png" sizes="512x512" href="icon-maskable-512.png" purpose="maskable">
 
