--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <a href="privacy.html">Privacy</a> · 
     <a href="terms.html">Terms</a>
   </p>
-  <p><em>As an Amazon Associate I earn from qualifying purchases.</em></p>
+  <p><em>Sebby (our mascot) and I hope this makes you day just a litle brighter. </em></p>
 </footer>
 
 <!-- Register PWA service worker -->
