--- a/index.html
+++ b/index.html
@@ -128,11 +128,8 @@
         <label class="muted"><input id="ignoreChewer" type="checkbox" /> Ignore chewer filter</label>
       </div>
 
-      <div class="row" style="margin-top:12px">
-        <button id="calcBtn" class="btn" type="button">Calculate</button>
-        <button id="resetBtn" class="btn secondary" type="button">Reset</button>
-        <button id="shareBtn" class="btn secondary" type="button">Share link</button>
-      </div>
+     <!-- Button Bar mount (Barkday v1) -->
+<div id="btnBarMount" class="btnbar-mount"></div>
 
       <div id="sizeWarn" class="warn" style="display:none"></div>
 
