--- a/index.html
+++ b/index.html
@@ -184,6 +184,21 @@
     navigator.serviceWorker.register('/Barkday/service-worker.js');
   }
 </script>
+<!-- Results Modal (Barkday) -->
+<div id="resultsModal" class="bd-modal" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="resultsModalTitle">
+  <div class="bd-backdrop" data-close="true"></div>
+  <div class="bd-dialog" role="document" tabindex="-1">
+    <button class="bd-close" type="button" aria-label="Close" data-close="true">×</button>
+    <header class="bd-header">
+      <h2 id="resultsModalTitle">Your Barkday Results</h2>
+    </header>
+    <div class="bd-body" id="resultsModalBody"></div>
+    <footer class="bd-footer">
+      <button class="bd-action" type="button" data-close="true">OK</button>
+    </footer>
+  </div>
+</div>
+<!-- /Results Modal -->
 
 </body>
 </html>
