--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
     </div>
   </div>
   <!-- /Results Modal -->
+  
+<!-- Toast (Round 2) -->
+<div id="bdToast" class="bd-toast" role="status" aria-live="polite">
+  <span id="bdToastMsg">Results updated.</span>
+  <button type="button" class="bd-x" aria-label="Dismiss">×</button>
+</div>
 
 </body>
 </html>
