--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#111827">
+
+  <meta name="color-scheme" content="light dark">
+
 </head>
 
 <body>
