--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </section>
   </div>
 
-  <script src="app.js?5" defer></script>
+  <script src="app.js?v=2025-06-28-1" defer></script>
   
   <footer style="margin-top:40px;padding:20px 0;text-align:center;font-size:0.9em;color:var(--text-secondary)">
     <p>© 2025 <strong>Barkday™</strong>. All Rights Reserved.</p>
