--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <a href="privacy.html">Privacy</a> · 
       <a href="terms.html">Terms</a>
     </p>
-    <p><em>Sebby (our mascot) and I hope this makes you day just a litle brighter. </em></p>
+    <p><em>Sebby (our mascot) and I hope this makes you day just a little brighter. </em></p>
   </footer>
 
   <!-- Register PWA service worker -->
