--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div>
          <label for="adultWeight">Expected adult weight (<span id="adultWeightVal">55</span> lb)</label>
           <div class="slider-wrap">
-            <div id="weightTooltip" class="slider-tooltip" role="status" aria-live="polite">55 lb</div>
+            <div id="weightTooltip" class="slider-tooltip" role="status" aria-live="polite" aria-hidden="true">55 lb</div>
             <input id="adultWeight" type="range" min="5" max="200" step="5" value="55" aria-describedby="weightTooltip" />
         </div>
         </div>
