--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
   </div>
 
   <script src="app.js?v=2025-10-03-4" defer></script>
+    <!-- PDF libs (vector-safe embedding for barkday-logo-vector.svg) -->
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/svg2pdf.js@2.2.4/dist/svg2pdf.umd.min.js"></script>
+
+  <!-- Barkday PDF add-on: per-record Print PDF + print-accurate layout -->
+  <script src="app-pdf.js?v=2025-10-04"></script>
+
   
   <footer style="margin-top:40px;padding:20px 0;text-align:center;font-size:0.9em;color:var(--text-secondary)">
     <p>© 2025 <strong>Barkday™</strong>. All Rights Reserved.</p>
