--- a/index.html
+++ b/index.html
@@ -235,11 +235,12 @@
 
       <!-- cards render here -->
     </div>
-    <footer class="bd-footer">
-      <button id="bdExport" class="ghost" type="button">Export JSON</button>
-      <button id="bdClearAll" class="ghost" type="button">Clear all</button>
-      <button id="bdClose" class="btn" type="button" data-close="drawer">Close</button>
-    </footer>
+   <footer class="bd-footer">
+  <button id="bdExport" class="ghost" type="button">Export</button>
+  <button id="bdImport" class="ghost" type="button">Import</button>
+  <button id="bdClearAll" class="ghost" type="button">Clear all</button>
+  <button id="bdClose" class="btn" type="button" data-close="drawer">Close</button>
+</footer>
   </div>
 </div>
 <!-- /Saved Results Drawer -->
