--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
   <input id="bdImportFile" type="file" accept=".barkday,.json" style="display:none">
 
       <!-- cards render here -->
-    </div>
+  <div id="bdSavedCards"></div>
+</div>
    <footer class="bd-footer">
   <button id="bdExport" class="ghost" type="button">Export</button>
   <button id="bdImport" class="ghost" type="button">Import</button>
